Sección 40: Jakarta EE 9: API Servlet - Introducción, terminada

--- a/webapp/src/main/webapp/index.html
+++ b/webapp/src/main/webapp/index.html
@@ -2,9 +2,26 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hola mundo Tomcat</title>
+    <title>Hola Mundo Tomcat</title>
 </head>
 <body>
-    <h1>Hola mundo Tomcat</h1>
+<h1>Hola mundo Tomcat</h1>
+<ul>
+    <li>
+        <a href="/webapp/parametros/url-get?saludo=Hola Andres">enviando parámetro saludo: /url-get?saludo=Hola
+            Andres</a>
+    </li>
+    <li>
+        <a href="/webapp/parametros/url-get?saludo=Hola&nombre=Andres&codigo=12345">/url-get?saludo=Hola
+            &nombre=Andres&codigo=12345</a>
+    </li>
+    <li>
+        <a href="/webapp/parametros/url-get?saludo=Hola&nombre=Andres">/url-get?saludo=Hola&nombre=Andres</a>
+    </li>
+    <li>
+        <a href="/webapp/parametros/url-get?nombre=Andres">/url-get?nombre=Andres</a>
+    </li>
+
+</ul>
 </body>
 </html>
